--- a/index.html
+++ b/index.html
@@ -56,9 +56,6 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
                     </li>
                     <li>
@@ -74,9 +71,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Hi there, I'm Kristy</h1>
+                <h1>Hi there</h1>
                 <hr>
-                <p>I'm a front end developer</p>
+                <p>My name is Kristy and I'm a front end developer.</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
@@ -86,16 +83,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">Portfolio</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                    <a href="#services" class="page-scroll btn btn-default btn-xl">Get Started!</a>
+                    <p class="text-faded">Companies I've worked for include Target, Thomson Reuters, Prime Digital Academy and FurnitureDealer.net, Check out a few of the projects that I've been involved with below.</p>
+                    <!-- <a href="#services" class="page-scroll btn btn-default btn-xl">Contact For More Info</a> -->
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="services">
+    <!-- <section id="services">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -136,7 +133,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
@@ -147,10 +144,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Senior User Interface Developer
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Thomson Reuters Developer Community Platform
                                 </div>
                             </div>
                         </div>
@@ -162,10 +159,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Front End Developer
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Target Canada
                                 </div>
                             </div>
                         </div>
@@ -177,10 +174,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Front End Developer
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Alison Craig Home Furnishings
                                 </div>
                             </div>
                         </div>
@@ -192,10 +189,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Front End Developer
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Furniture Fair
                                 </div>
                             </div>
                         </div>
@@ -207,16 +204,16 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Front End Developer
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Community Mediation &amp; Restorative Services
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <!-- <div class="col-lg-4 col-sm-6">
                     <a href="#" class="portfolio-box">
                         <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -230,19 +227,19 @@
                             </div>
                         </div>
                     </a>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
 
-    <aside class="bg-dark">
+    <!-- <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Free Download at Start Bootstrap!</h2>
                 <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
             </div>
         </div>
-    </aside>
+    </aside> -->
 
     <section id="contact">
         <div class="container">
@@ -250,15 +247,15 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
-                    <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    <p>Curious about the work I've done? Let's be friends!</p>
                 </div>
-                <div class="col-lg-4 col-lg-offset-2 text-center">
+                <!-- <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x wow bounceIn"></i>
                     <p>123-456-6789</p>
-                </div>
-                <div class="col-lg-4 text-center">
+                </div> -->
+                <div class="col-lg-12 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                    <p><a href="mailto:your-email@your-domain.com">wessel.kristy@gmail.com</a></p>
                 </div>
             </div>
         </div>
