changed color theme

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="header-content-inner">
                 <h1>Hi there</h1>
                 <hr>
-                <p>My name is Kristy and I'm a front end developer.</p>
+                <p>My name is Kristy. I'm a web developer, instructor, wellness advocate, gardener, yogini, survivalist and lifelong infovore.</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
@@ -85,7 +85,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Portfolio</h2>
                     <hr class="light">
-                    <p class="text-faded">Companies I've worked for include Target, Thomson Reuters, Prime Digital Academy and FurnitureDealer.net, Check out a few of the projects that I've been involved with below.</p>
+                    <p class="text-faded">I have worked for Target, FindLaw, Thomson Reuters, Prime Digital Academy and FurnitureDealer.net. Check out a few of the projects that I've been involved with below.</p>
                     <!-- <a href="#services" class="page-scroll btn btn-default btn-xl">Contact For More Info</a> -->
                 </div>
             </div>
