--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                         </div>
                     </a>
                 </div>
-                <!-- <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6">
                     <a href="#" class="portfolio-box">
                         <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -227,7 +227,7 @@
                             </div>
                         </div>
                     </a>
-                </div> -->
+                </div>
             </div>
         </div>
     </section>
