--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                                     Front End Developer
                                 </div>
                                 <div class="project-name">
-                                    Furniture Fair
+                                    Walker West Music Academy
                                 </div>
                             </div>
                         </div>
@@ -219,10 +219,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Front End Developer
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Furniture Fair
                                 </div>
                             </div>
                         </div>
