--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
-                    <p>Curious about the work I've done? Let's be friends!</p>
+                    <!-- <p>Curious about the work I've done?</p> -->
                 </div>
                 <!-- <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x wow bounceIn"></i>
