added thomson reuters ediscovery point

--- a/index.html
+++ b/index.html
@@ -135,9 +135,37 @@
         </div>
     </section> -->
 
+    <section class="bg-primary" id="soc">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">Portfolio</h2>
+                    <hr class="light">
+                    <p class="text-faded">I have worked for Target, FindLaw, Thomson Reuters, Prime Digital Academy and FurnitureDealer.net. Check out a few of the projects that I've been involved with below.</p>
+                    <!-- <a href="#services" class="page-scroll btn btn-default btn-xl">Contact For More Info</a> -->
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter">
+                <div class="col-lg-4 col-sm-6">
+                    <a href="http://legalsolutions.thomsonreuters.com/law-products/solutions/ediscovery-point" target="_blank" class="portfolio-box">
+                        <img src="img/portfolio/7.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Senior User Interface Developer
+                                </div>
+                                <div class="project-name">
+                                    Thomson Reuters eDiscovery Point
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="https://developers.thomsonreuters.com" target="_blank" class="portfolio-box">
                         <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
@@ -169,7 +197,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="http://www.alisoncraighome.com/" target="_blank" class="portfolio-box">
+                    <a href="http://www.alisoncraighome.com" target="_blank" class="portfolio-box">
                         <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -177,14 +205,14 @@
                                     Front End Developer
                                 </div>
                                 <div class="project-name">
-                                    Alison Craig Home Furnishings
+                                    Community Mediation &amp; Restorative Services
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="http://www.furniture-fair.net/" target="_blank" class="portfolio-box">
+                    <a href="http://walkerwest.org/" target="_blank" class="portfolio-box">
                         <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -214,7 +242,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
+                    <a href="http://www.furniture-fair.net/" class="portfolio-box">
                         <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -255,7 +283,7 @@
                 </div> -->
                 <div class="col-lg-12 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="mailto:your-email@your-domain.com">wessel.kristy@gmail.com</a></p>
+                    <p><a href="mailto:wessel.kristy@gmail.com">wessel.kristy@gmail.com</a></p>
                 </div>
             </div>
         </div>
