--- a/index.html
+++ b/index.html
@@ -135,18 +135,6 @@
         </div>
     </section> -->
 
-    <section class="bg-primary" id="soc">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Portfolio</h2>
-                    <hr class="light">
-                    <p class="text-faded">I have worked for Target, FindLaw, Thomson Reuters, Prime Digital Academy and FurnitureDealer.net. Check out a few of the projects that I've been involved with below.</p>
-                    <!-- <a href="#services" class="page-scroll btn btn-default btn-xl">Contact For More Info</a> -->
-                </div>
-            </div>
-        </div>
-    </section>
 
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
@@ -157,7 +145,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Senior User Interface Developer
+                                    Senior Front End Developer
                                 </div>
                                 <div class="project-name">
                                     Thomson Reuters eDiscovery Point
