changed personal tagline

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="header-content-inner">
                 <h1>Hi there</h1>
                 <hr>
-                <p>My name is Kristy. I'm a web developer, instructor, wellness advocate, gardener, yogini, survivalist and lifelong infovore.</p>
+                <p>My name is Kristy. I'm a web developer, gardener, yogini, survivalist and lifelong infovore.</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
